--- a/public/css/style.css
+++ b/public/css/style.css
@@ -571,11 +571,7 @@ body {
 
 .article-card:hover {
     border: 2px solid var(--dark);
-    transform: scale(1.07);
-}
-
-.article-card:hover .btn-slide span, .article-card:hover .btn-slide i {
-    background: var(--dark);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px !important;
 }
 
 .news-block {
