--- a/public/css/style.css
+++ b/public/css/style.css
@@ -597,3 +597,37 @@ body {
 .fa-25{
     font-size: 25px !important;
 }
+
+.form-check-input:checked {
+    background-color: var(--secondary);
+    border-color: var(--secondary);
+}
+
+.iti {
+    width: 100% !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    display: flex !important;
+    height: 55px !important;
+    align-items: center !important;
+     max-width: 100%;
+}
+.select2-container--default .select2-selection--single {
+    height: 55px !important;
+     max-width: 100%;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 14px !important;
+}
+
+.select2-container--default.is-invalid .select2-selection--single {
+    border: 1px solid #dc3545;
+    border-radius: 0.375rem;
+
+}
+
+.select2-container--default.is-valid .select2-selection--single {
+    border: 1px solid #198754;
+    border-radius: 0.375rem;
+
+}
