--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,8 +460,8 @@ body {
 
 .footer .btn.btn-social {
     margin-right: 5px;
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -630,4 +630,14 @@ body {
     border: 1px solid #198754;
     border-radius: 0.375rem;
 
+}
+
+.fs-12 {
+    font-size: 12px;
+}
+
+.btn-primary:disabled, .btn-primary.disabled {
+    color: #FFFFFF;
+    background-color: rgba(128, 128, 128, 0.842);
+    border-color: rgba(128, 128, 128, 0.842);
 }
