--- a/public/css/style.css
+++ b/public/css/style.css
@@ -484,6 +484,7 @@ body {
     font-size: 15px;
     font-weight: normal;
     text-transform: capitalize;
+    width: fit-content;
     transition: .3s;
 }
 
