--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,7 @@ body {
     margin-left: 8px;
     width: 10px;
     height: 10px;
-    background-image: url('data:image/svg+xml;utf8,<svg fill="currentColor" height="10" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M31.3 192l128 128 128-128H31.3z"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg fill="white" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M96 192l64 64 64-64"/></svg>');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -492,11 +492,16 @@ body {
 }
 
 .footer .btn.btn-link::before {
-    position: relative;
-    content: "\f105";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
     margin-right: 10px;
+    width: 10px;
+    height: 10px;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="white" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M96 96l128 160-128 160"/></svg>');
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
 }
 
 .footer .btn.btn-link:hover {
